# api.yaml
@@ -127,16 +127,10 @@ paths:
     
   /user/updateprofil/info:
       put:
-        summary: Mettre a jour les informations d'un utilisateur
+        summary: Mettre a jour le profil d'un utilisateur
         produces:
-          - application/x-www-form-urlencoded
-          - text/html
-          - text/plain; charset=utf-8
           - multipart/form-data
         consumes:
-          - application/x-www-form-urlencoded
-          - text/html
-          - text/plain; charset=utf-8
           - multipart/form-data
         description: retourne une reponse 
         responses:
@@ -166,36 +160,10 @@ paths:
           - name: biographie
             in: formData
             required: true
-
-  /user/updateprofil/avatar:
-      put:
-        summary: Modifier l'image de profil d'un utilisateur
-        produces:
-          - multipart/form-data
-        consumes:
-          - multipart/form-data
-        description: Retourne une liste de donnees en JSON
-        responses:
-          status:
-            false:
-              description: Utilisateur non trouve
-            true:
-              description: Utilisateur authentifie
-          500:
-            description: Erreur du serveur
-        parameters:
-          - name: userId
-            description: Identifiant de l'utilisateur
-            in: formData
-            required: true
-          - name: token
-            description: Token d'acces
-            in: header
-            required: true
           - name: image
             in: formData
             type: file
-            required: true
+            required: false
 
   /user/updateprofil/email:
       put:
